# FoodTracker

./: CMakeLists.txt  HealthController.h  Healthcontroller.cpp  Main.qml  README.md  main.cpp
